--- a/values.yaml
+++ b/values.yaml
@@ -28,9 +28,9 @@ global:
     ## @param global.postgresql.auth.secretKeys.replicationPasswordKey Name of key in existing secret to use for PostgreSQL credentials (overrides `auth.secretKeys.replicationPasswordKey`). Only used when `global.postgresql.auth.existingSecret` is set.
     ##
     auth:
-      postgresPassword: ""
-      username: ""
-      password: ""
+      postgresPassword: "Passw0rd"
+      username: "felixchung"
+      password: "Passw0rd"
       database: "demodb01"
       existingSecret: ""
       secretKeys:
