--- a/values.yaml
+++ b/values.yaml
@@ -960,7 +960,7 @@ readReplicas:
   service:
     ## @param readReplicas.service.type Kubernetes Service type
     ##
-    type: ClusterIP
+    type: NodePort
     ## @param readReplicas.service.ports.postgresql PostgreSQL service port
     ##
     ports:
@@ -971,7 +971,7 @@ readReplicas:
     ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
     ##
     nodePorts:
-      postgresql: ""
+      postgresql: 30432
     ## @param readReplicas.service.clusterIP Static clusterIP or None for headless services
     ## e.g:
     ## clusterIP: None
