--- a/values.yaml
+++ b/values.yaml
@@ -596,7 +596,7 @@ primary:
   service:
     ## @param primary.service.type Kubernetes Service type
     ##
-    type: ClusterIP
+    type: NodePort
     ## @param primary.service.ports.postgresql PostgreSQL service port
     ##
     ports:
@@ -607,7 +607,7 @@ primary:
     ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
     ##
     nodePorts:
-      postgresql: ""
+      postgresql: 30432
     ## @param primary.service.clusterIP Static clusterIP or None for headless services
     ## e.g:
     ## clusterIP: None
